[MT][FEATURE] spark load in MT from 111-rc3 to 115:
change list
1.add broker plus manifest.yaml
2.[MT] spark load for mt
3.[MT] Adapt MT internal spark/yarn commands and configurations
4.[MT] add custom properties for spark load etl & del tmp hive table
5.[MT] delete spark delete spark repository and archive & improve etl job log
6.[MT] feature(sparkload): support bitmap encode features in spark load
7.[MT] feature(sparkload parquet): disable parquet dictionary
8.feature(sparkload): support bitmap binary data from hive in spark load
9.[MT] feature(sparkload): add tolas-output dependency in SparkDpp
10.fix(spark load): resolve args conflict between skip_null_value  and map_side_join
   refactor(spark load): refactor function name

each commit detail are listed in this branch:
https://dev.sankuai.com/code/repo-detail/data/palo/commit/list?branch=sparkload-14-update-details
or in branh 13:
https://dev.sankuai.com/code/repo-detail/data/palo/commit/list?branch=refs%2Fheads%2F13

Some Spark Load changes in 0.15 to 1.1:
[MT][FIX][SPARKLOAD] fix bug when partition_id exceeds integer range in spark load (#9073)
[MT][FIX][SPARKLOAD] fix `getHashValue` of string type is always zero in spark load (#9135)
[MT][TMP][SPARKLOAD] support `custom.global.dict.table` in spark load
[MT][FEATURE][SPARKLOAD] support retry-strategy when get the spark elt job state timeout
[MT][SPARKLOAD] hive table name start with tmp key word and its size should be no longer than 128
[MT][TMP][SPARKLOAD] fix min_value will be negative number when `maxGlobalDictValue`  exceeds integer range (#9436)

detail commmits' content could be found in this branch:
https://dev.sankuai.com/code/repo-detail/data/palo/commit/list?branch=refs%2Fheads%2F14

[MT][TMP][FIX] fix UT in spark load
[MT][FEATURE] feature(spark-dpp version): add version file for spark-dpp
add spark-dpp commit id as version file when build FE

[MT][SPARKLOAD] some fixes from 15 to 1.1 by wangbo36
1 not connect hive metastore when create hive table